--- a/security/src/main/resources/application.properties
+++ b/security/src/main/resources/application.properties
@@ -5,3 +5,6 @@ logging.pattern.console=%d{MM-dd HH:mm:ss} - %logger{36} - %msg%n
 #spring.security.user.password=1234
 
 spring.datasource.url=jdbc:h2:mem:testdb 
+
+spring.security.oauth2.client.registration.google.client-id=78717585088-5slnk7cm1sh6m82jou6dk6vc12j2tg9d.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
